added work with file

--- a/static/css/slider.css
+++ b/static/css/slider.css
@@ -5,7 +5,7 @@
     height: 300px;
     margin-bottom: 15px;
 }
-/* Картинка мастабируется по отношению к родительскому элементу */
+
 .slider .item img {
     object-fit: cover;
     width: 100%;
@@ -13,7 +13,7 @@
     border: none !important;
     box-shadow: none !important;
 }
-/* Кнопки вперед и назад */
+
 .slider .prev, .slider .next {
     cursor: pointer;
     position: absolute;
@@ -32,24 +32,24 @@
     right: 0;
     border-radius: 3px 0 0 3px;
 }
-/* При наведении на кнопки добавляем фон кнопок */
+
 .slider .prev:hover,
 .slider .next:hover {
     background-color: rgba(0, 0, 0, 0.8);
 }
-/* Заголовок слайда */
+
 .slideText {
     position: absolute;
     color: #fff;
     font-size: 35px;
-    /* Выравнивание текста по горизонтали и по вертикали*/
+
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
-    /* Тень*/
+
     text-shadow: 1px 1px 1px #000, 0 0 1em #000;
 }
-/* Кружочки */
+
 .slider-dots {
     text-align: center;
 }
@@ -67,7 +67,7 @@
 .slider-dots_item:hover {
     background-color: #aaa;
 }
-/* Анимация слайдов */
+
 .slider .item {
     -webkit-animation-name: fade;
     -webkit-animation-duration: 1.5s;
@@ -89,4 +89,14 @@
     to {
         opacity: 1
     }
+}
+
+.slideText{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.slideText > p{
+    text-align: center;
 }
